add some text & minor change

--- a/demo1/demo1.ipynb
+++ b/demo1/demo1.ipynb
@@ -4,13 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**因 Jupter 对多进程支持不完善，因此分布式实验的代码运行均需要通过脚本执行！！！！！！**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.背景介绍\n",
     "\n",
     "本实验主要研究 PyTorch 分布式训练框架下的单机多卡（Single Machine Multi-GPU）并行训练方法，重点探索 torch.distributed 和 torch.nn.parallel.DistributedDataParallel (DDP) 的使用。\n",
     "\n",
     "随着深度学习模型规模的不断增长，单张 GPU 的计算能力往往难以满足高效训练的需求，因此，利用多张 GPU 进行数据并行加速训练成为一种常见的优化方案。\n",
     "\n",
-    "本实验采用 PyTorch 框架，实现一个基于 Transformer 结构的 NLP 模型，并使用 DDP 进行多 GPU 训练，以验证其性能和正确性。"
+    "本实验采用 PyTorch 框架，实现一个基于 Transformer 结构的 NLP 模型，并使用 DDP 进行多 GPU 训练，以验证其性能和正确性。\n"
    ]
   },
   {
@@ -86,6 +93,13 @@
    "metadata": {},
    "source": [
     "### 5.1. transformer模型定义"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "导入所需要的包，并定义了一个基本的 transformer 模型"
    ]
   },
   {
@@ -202,6 +216,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "该类定义了一个模拟数据集，其中第 i 条数据类似 [i, i, i, i, i, i, i]\n",
+    "\n",
+    "在训练的过程中，我们希望模型能够捕捉到这条性质"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -232,32 +255,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "该段训练代码实现了主要的训练逻辑，包括数据集的使用，模型的实例化，DDP方法和具体的训练步骤"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 PyTorch 分布式训练中，每个训练进程称为一个“worker”，每个 worker 会处理自己分配的一部分数据和模型副本。\n",
+    "\n",
+    "world_size：表示所有参与训练的进程总数。例如，如果你在 2 张 GPU 上各启动 1 个进程，world_size 就是 2。\n",
+    "\n",
+    "rank：表示当前进程的编号，从 0 开始。例如，有两个进程的话，rank 可以是 0 或 1。每个进程通过 rank 来区分身份并处理属于自己的数据子集。\n",
+    "\n",
+    "这两个参数在 dist.init_process_group() 中被用来初始化通信组，使得每个进程知道自己是谁以及整个训练的结构。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(rank, world_size):\n",
-    "    VOCAB_SIZE = 100\n",
-    "    D_MODEL = 12\n",
-    "    NUM_HEADS = 4\n",
-    "    D_FF = 24\n",
-    "    NUM_LAYERS = 2\n",
-    "    MAX_LEN = 100\n",
+    "    # 设置模型和训练的超参数\n",
+    "    VOCAB_SIZE = 100        # 词汇表大小\n",
+    "    D_MODEL = 12            # 嵌入维度 / 模型维度\n",
+    "    NUM_HEADS = 4           # 注意力头数量\n",
+    "    D_FF = 24               # 前馈层的中间维度\n",
+    "    NUM_LAYERS = 2          # Transformer 层数\n",
+    "    MAX_LEN = 100           # 输入序列的最大长度\n",
     "\n",
-    "    DATASET_SIZE = 12\n",
-    "    DATASET_LENGTH = 10\n",
-    "    BATCH_SIZE = 2\n",
+    "    DATASET_SIZE = 12       # 样本数量（总数据条数）\n",
+    "    DATASET_LENGTH = 10     # 每条样本的长度\n",
+    "    BATCH_SIZE = 2          # 每个进程的 batch 大小\n",
     "\n",
+    "    # 创建自定义数据集\n",
     "    dataset = NLPDataset(size=DATASET_SIZE, length=DATASET_LENGTH)\n",
+    "\n",
+    "    # 为分布式训练设置采样器，每个 rank（进程）处理自己的一份数据\n",
     "    sampler = DistributedSampler(dataset, num_replicas=world_size, rank=rank)\n",
+    "\n",
+    "    # 使用带分布式采样器的数据加载器\n",
     "    dataloader = DataLoader(dataset, batch_size=BATCH_SIZE, sampler=sampler)\n",
     "\n",
+    "    # 设置后端：GPU 可用就使用 nccl，否则使用 gloo（CPU）\n",
     "    backend = \"nccl\" if torch.cuda.is_available() else \"gloo\"\n",
     "    device = torch.device(f\"cuda:{rank}\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
+    "    # 初始化当前进程的分布式环境\n",
     "    dist.init_process_group(backend=backend, rank=rank, world_size=world_size)\n",
     "\n",
+    "    # 实例化 Transformer 模型并移动到对应设备\n",
     "    model = Transformer(\n",
     "        vocab_size=VOCAB_SIZE,\n",
     "        d_model=D_MODEL,\n",
@@ -266,25 +318,38 @@
     "        num_layers=NUM_LAYERS,\n",
     "        max_len=MAX_LEN,\n",
     "    ).to(device)\n",
+    "\n",
+    "    # 将模型封装为分布式模型（DDP）\n",
     "    model = DDP(model, device_ids=[rank] if torch.cuda.is_available() else None)\n",
     "\n",
+    "    # 使用交叉熵作为损失函数\n",
     "    criterion = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    # 使用 SGD 作为优化器\n",
     "    optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
     "\n",
+    "    # 开始训练循环\n",
     "    for epoch in range(200):\n",
     "        for batch, data in enumerate(dataloader):\n",
-    "            label = data[:, 1:].to(device)\n",
-    "            data = data[:, :-1].to(device)\n",
-    "            optimizer.zero_grad()\n",
-    "            outputs = model(data)\n",
-    "            loss = criterion(outputs.view(-1, VOCAB_SIZE), label.view(-1))\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
+    "            # 目标是当前句子的下一位\n",
+    "            label = data[:, 1:].to(device)       # 标签是输入右移一位\n",
+    "            data = data[:, :-1].to(device)       # 输入去掉最后一个 token\n",
     "\n",
+    "            optimizer.zero_grad()                # 清空梯度\n",
+    "            outputs = model(data)                # 前向传播\n",
+    "\n",
+    "            # 计算损失：输出和标签都 reshape 成二维，适配交叉熵\n",
+    "            loss = criterion(outputs.view(-1, VOCAB_SIZE), label.view(-1))\n",
+    "\n",
+    "            loss.backward()                      # 反向传播\n",
+    "            optimizer.step()                     # 更新参数\n",
+    "\n",
+    "            # 只在 rank==0 的主进程上打印日志，避免重复\n",
     "            if rank == 0:\n",
     "                print(f\"Epoch {epoch}, Batch {batch}, Loss: {loss.item()}\")\n",
     "\n",
-    "    dist.destroy_process_group()"
+    "    # 训练完成后销毁分布式进程组\n",
+    "    dist.destroy_process_group()\n"
    ]
   },
   {
@@ -292,6 +357,21 @@
    "metadata": {},
    "source": [
     "### 5.4启动训练"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "假设你已经写好了训练脚本，例如叫做 train.py，可以通过如下命令启动分布式训练：\n",
+    "\n",
+    "torchrun --nproc-per-node=2 train.py\n",
+    "\n",
+    "参数解释：\n",
+    "\n",
+    "torchrun：PyTorch 推荐的方式来启动多进程训练（取代老的 python -m torch.distributed.launch）。\n",
+    "\n",
+    "--nproc-per-node=2：表示在本机上启动 2 个进程，分别对应 rank=0 和 rank=1。"
    ]
   },
   {
