--- a/demo2/demo2.ipynb
+++ b/demo2/demo2.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**因 Jupter 对多进程支持不完善，因此分布式实验的代码运行均需要通过脚本执行！！！！！！**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.背景介绍\n",
     "\n",
     "本实验主要研究 PyTorch 分布式训练框架下的单机多卡（Single Machine Multi-GPU）流水线并行训练方法，重点探索 torch.distributed.pipelining 的使用。"
@@ -78,6 +85,13 @@
    "metadata": {},
    "source": [
     "### 5.1. transformer模型定义"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "导入所需要的包，并定义了一个基本的 transformer 模型"
    ]
   },
   {
@@ -226,6 +240,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "该类定义了一个模拟数据集，其中第 i 条数据类似 [i, i, i, i, i, i, i]\n",
+    "\n",
+    "在训练的过程中，我们希望模型能够捕捉到这条性质"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -256,35 +279,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "该段训练代码实现了主要的训练逻辑，包括数据集的使用，模型的实例化，pipeline方法和具体的训练步骤"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(rank, world_size):\n",
-    "    VOCAB_SIZE = 100\n",
-    "    D_MODEL = 12\n",
-    "    NUM_HEADS = 4\n",
-    "    D_FF = 24\n",
-    "    NUM_LAYERS = 2\n",
-    "    MAX_LEN = 100\n",
+    "    # Transformer模型的基本参数\n",
+    "    VOCAB_SIZE = 100        # 词表大小\n",
+    "    D_MODEL = 12            # 模型的嵌入维度（hidden size）\n",
+    "    NUM_HEADS = 4           # 多头注意力的头数\n",
+    "    D_FF = 24               # 前馈网络维度\n",
+    "    NUM_LAYERS = 2          # Transformer 层数\n",
+    "    MAX_LEN = 100           # 序列最大长度\n",
     "\n",
-    "    DATASET_SIZE = 12\n",
-    "    DATASET_LENGTH = 10\n",
-    "    BATCH_SIZE = 4\n",
+    "    # 数据集相关参数\n",
+    "    DATASET_SIZE = 12       # 数据集中样本数量\n",
+    "    DATASET_LENGTH = 10     # 每个样本的序列长度\n",
+    "    BATCH_SIZE = 4          # 每个 batch 的样本数\n",
     "\n",
-    "    NUM_MICROBATCHES = 2\n",
+    "    NUM_MICROBATCHES = 2    # 用于 GPipe 分割的 microbatch 数\n",
     "\n",
+    "    # 定义损失函数的封装（方便被 GPipe 调用）\n",
     "    def compute_loss(output, target):\n",
     "        criterion = nn.CrossEntropyLoss()\n",
     "        loss = criterion(output.view(-1, VOCAB_SIZE), target.view(-1))\n",
     "        return loss\n",
     "\n",
+    "    # 构造 NLP 数据集和 DataLoader\n",
     "    dataset = NLPDataset(size=DATASET_SIZE, length=DATASET_LENGTH)\n",
     "    dataloader = DataLoader(dataset, batch_size=BATCH_SIZE)\n",
     "\n",
+    "    # 构造一个输入模板，用于 GPipe pipeline 初始化\n",
     "    x = torch.zeros((BATCH_SIZE // NUM_MICROBATCHES, DATASET_LENGTH - 1), dtype=torch.long)\n",
     "\n",
+    "    # 构建带有 split_spec 的 GPipe pipeline，将模型划分为多个 stage\n",
     "    pipe = pipeline(\n",
     "        module=Transformer(\n",
     "            vocab_size=VOCAB_SIZE,\n",
@@ -294,39 +330,56 @@
     "            num_layers=NUM_LAYERS,\n",
     "            max_len=MAX_LEN,\n",
     "        ),\n",
-    "        mb_args=(x,),\n",
+    "        mb_args=(x,),  # microbatch 的输入形状，用于模型切分\n",
     "        split_spec={\n",
-    "            \"layers.1\": SplitPoint.BEGINNING,\n",
+    "            \"layers.1\": SplitPoint.BEGINNING,  # 从 Transformer 第2层开始划分模型\n",
     "        },\n",
     "    )\n",
     "\n",
+    "    # 通过环境变量获取当前进程的rank和world size\n",
     "    rank = int(os.environ[\"RANK\"])\n",
     "    world_size = int(os.environ[\"WORLD_SIZE\"])\n",
     "\n",
+    "    # 初始化 PyTorch 分布式通信\n",
     "    dist.init_process_group(backend=\"nccl\", rank=rank, world_size=world_size)\n",
     "\n",
+    "    # 指定当前 rank 使用的 GPU 设备\n",
     "    device = f\"cuda:{rank}\"\n",
     "\n",
+    "    # 获取当前 rank 的模型 stage，用于定义 optimizer\n",
     "    stage_mod = pipe.get_stage_module(rank)\n",
     "    optimizer = optim.SGD(stage_mod.parameters(), lr=0.01)\n",
+    "\n",
+    "    # 构建模型 stage，并设置 device 和通信信息\n",
     "    stage = pipe.build_stage(rank, device, None)\n",
     "\n",
+    "    # 创建 GPipe 的训练调度器（ScheduleGPipe）\n",
     "    schedule = ScheduleGPipe(stage, NUM_MICROBATCHES, compute_loss)\n",
+    "\n",
+    "    # 正式开始训练过程\n",
     "    for epoch in range(200):\n",
     "        for batch, data in enumerate(dataloader):\n",
-    "            label = data[:, 1:].to(device)\n",
-    "            x = data[:, :-1].to(device)\n",
-    "            optimizer.zero_grad()\n",
+    "            # 将输入数据切分为 input 和 target\n",
+    "            label = data[:, 1:].to(device)  # 目标序列（标签）\n",
+    "            x = data[:, :-1].to(device)     # 输入序列（模型输入）\n",
+    "\n",
+    "            optimizer.zero_grad()           # 梯度清零\n",
+    "\n",
+    "            # 对于 rank 0：只负责前向传输，不计算 loss\n",
     "            if rank == 0:\n",
     "                schedule.step(x)\n",
     "            else:\n",
+    "                # 其他 stage（最后一段）负责 loss 计算和反向传播\n",
     "                losses = []\n",
     "                output = schedule.step(target=label, losses=losses)\n",
     "                print(\n",
     "                    f\"Epoch {epoch}, Batch {batch}, Loss: {torch.stack(losses).mean()}\"\n",
     "                )\n",
+    "\n",
+    "            # 优化参数\n",
     "            optimizer.step()\n",
     "\n",
+    "    # 销毁进程组，结束训练\n",
     "    dist.destroy_process_group()\n"
    ]
   },
