--- a/demo3/demo3.ipynb
+++ b/demo3/demo3.ipynb
@@ -69,6 +69,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "导入所需要的包，并定义了一个基本的 transformer 模型"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -218,6 +225,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "该类定义了一个模拟数据集，其中第 i 条数据类似 [i, i, i, i, i, i, i]\n",
+    "\n",
+    "在训练的过程中，我们希望模型能够捕捉到这条性质"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -254,9 +270,11 @@
    "outputs": [],
    "source": [
     "def parse_yaml_config(file_path):\n",
+    "    # 解析 YAML 配置文件，读取模型、数据集、训练、并行配置参数\n",
     "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
     "        config = yaml.safe_load(f)\n",
     "\n",
+    "    # 模型结构参数\n",
     "    model_args = {\n",
     "        \"vocab_size\": config.get(\"vocab_size\"),\n",
     "        \"max_seq_length\": config.get(\"max_seq_length\"),\n",
@@ -266,11 +284,13 @@
     "        \"num_layers\": config.get(\"num_layers\"),\n",
     "    }\n",
     "\n",
+    "    # 数据集参数\n",
     "    dataset_args = {\n",
     "        \"dataset_size\": config.get(\"dataset_size\"),\n",
     "        \"data_length\": config.get(\"data_length\"),\n",
     "    }\n",
     "\n",
+    "    # 训练参数\n",
     "    training_args = {\n",
     "        \"train_epochs\": config.get(\"train_epochs\"),\n",
     "        \"micro_batch_size\": config.get(\"micro_batch_size\"),\n",
@@ -279,10 +299,12 @@
     "        \"device_type\": config.get(\"device_type\"),\n",
     "    }\n",
     "\n",
+    "    # 由微批数和微批大小计算总 batch size\n",
     "    training_args[\"batch_size\"] = (\n",
     "        training_args[\"micro_num\"] * training_args[\"micro_batch_size\"]\n",
     "    )\n",
     "\n",
+    "    # 并行参数\n",
     "    parallel_args = {\n",
     "        \"pipeline_parallel_size\": config.get(\"pipeline_parallel_size\"),\n",
     "        \"data_parallel_size\": config.get(\"data_parallel_size\"),\n",
@@ -290,23 +312,27 @@
     "\n",
     "    return model_args, dataset_args, training_args, parallel_args\n",
     "\n",
-    "def train(rank, world_size, config_file):\n",
-    "    model_args, dataset_args, training_args, parallel_args = parse_yaml_config(\n",
-    "        config_file\n",
-    "    )\n",
     "\n",
+    "def train(rank, world_size, config_file):\n",
+    "    # 加载配置\n",
+    "    model_args, dataset_args, training_args, parallel_args = parse_yaml_config(config_file)\n",
+    "\n",
+    "    # 定义 loss 函数\n",
     "    def compute_loss(output, target):\n",
     "        criterion = nn.CrossEntropyLoss()\n",
     "        loss = criterion(output.view(-1, model_args[\"vocab_size\"]), target.view(-1))\n",
     "        return loss\n",
     "\n",
+    "    # 创建一个微批的输入占位符（用于推理管道构建）\n",
     "    x = torch.zeros(\n",
     "        (training_args[\"micro_batch_size\"], dataset_args[\"data_length\"] - 1),\n",
     "        dtype=torch.long,\n",
     "    )\n",
     "\n",
+    "    # 构建流水线切割点，按层划分阶段\n",
     "    split_spec = {}\n",
     "    for i in range(parallel_args[\"pipeline_parallel_size\"] - 1):\n",
+    "        # 按等间隔方式划分 Transformer 层的切割点\n",
     "        layers_id = (\n",
     "            (model_args[\"num_layers\"] - 1)\n",
     "            // parallel_args[\"pipeline_parallel_size\"]\n",
@@ -314,6 +340,7 @@
     "        )\n",
     "        split_spec[f\"layers.{layers_id}\"] = SplitPoint.END\n",
     "\n",
+    "    # 构建流水线模型，进行 pipeline 切分\n",
     "    pipe = pipeline(\n",
     "        module=Transformer(\n",
     "            vocab_size=model_args[\"vocab_size\"],\n",
@@ -327,6 +354,7 @@
     "        split_spec=split_spec,\n",
     "    )\n",
     "\n",
+    "    # 初始化 2D 并行设备网格（data 并行 x pipeline 并行）\n",
     "    mesh_2d = init_device_mesh(\n",
     "        training_args[\"device_type\"],\n",
     "        mesh_shape=(\n",
@@ -336,26 +364,38 @@
     "        mesh_dim_names=(\"dp\", \"pp\"),\n",
     "    )\n",
     "\n",
+    "    # 获取当前进程在 pipeline 和 data 并行中的 rank\n",
     "    pp_group = mesh_2d.get_group(\"pp\")\n",
     "    dp_group = mesh_2d.get_group(\"dp\")\n",
     "\n",
     "    pp_rank = dist.get_rank(pp_group)\n",
     "    dp_rank = dist.get_rank(dp_group)\n",
     "\n",
+    "    # 设置当前 rank 使用的设备\n",
     "    device = f\"cuda:{rank % 2}\" if training_args[\"device_type\"] == \"gpu\" else \"cpu\"\n",
     "\n",
+    "    # 获取该 stage 的模型模块，并移动到设备\n",
     "    stage_mod = pipe.get_stage_module(pp_rank).to(device)\n",
     "    print(\"rank, stage_mod\", rank, stage_mod)\n",
+    "\n",
+    "    # 使用 DDP 包装当前模块，支持数据并行\n",
     "    dp_mod = DDP(\n",
     "        stage_mod,\n",
     "        device_ids=[rank] if not device == \"cpu\" else None,\n",
     "        process_group=dp_group,\n",
     "    )\n",
-    "    optimizer = optim.SGD(dp_mod.parameters(), lr=training_args[\"learning_rate\"])\n",
-    "    info = pipe.info()\n",
-    "    stage = build_stage(stage_mod, pp_rank, info, device, pp_group)\n",
     "\n",
+    "    # 构造优化器\n",
+    "    optimizer = optim.SGD(dp_mod.parameters(), lr=training_args[\"learning_rate\"])\n",
+    "\n",
+    "    # 构建流水线执行阶段\n",
+    "    info = pipe.info()\n",
+    "    stage = build_stage(dp_mod, pp_rank, info, device, pp_group)\n",
+    "\n",
+    "    # 构建流水线调度器（GPipe），支持前后向分段流水并行\n",
     "    schedule = ScheduleGPipe(stage, training_args[\"micro_num\"], compute_loss)\n",
+    "\n",
+    "    # 构建数据集和分布式采样器\n",
     "    dataset = NLPDataset(\n",
     "        size=dataset_args[\"dataset_size\"], length=dataset_args[\"data_length\"]\n",
     "    )\n",
@@ -365,24 +405,34 @@
     "    dataloader = DataLoader(\n",
     "        dataset, batch_size=training_args[\"batch_size\"], sampler=sampler\n",
     "    )\n",
+    "\n",
+    "    # 训练主循环\n",
     "    for epoch in range(training_args[\"train_epochs\"]):\n",
     "        for batch, data in enumerate(dataloader):\n",
     "            label = data[:, 1:].to(device)\n",
     "            x = data[:, :-1].to(device)\n",
+    "\n",
     "            optimizer.zero_grad()\n",
+    "\n",
     "            if pp_rank == 0:\n",
+    "                # 第一个阶段只进行前向传播\n",
     "                schedule.step(x)\n",
     "            else:\n",
+    "                # 其他阶段进行前向 + 反向传播，并收集 loss\n",
     "                losses = []\n",
     "                output = schedule.step(target=label, losses=losses)\n",
     "                loss = torch.stack(losses).mean()\n",
+    "\n",
+    "                # 对 loss 进行 data-parallel 级别的 all-reduce\n",
     "                dist.all_reduce(loss, op=ReduceOp.SUM, group=dp_group)\n",
     "                if dp_rank == 0:\n",
     "                    print(\n",
     "                        f\"Epoch {epoch}, Batch {batch}, Loss: {loss / parallel_args['data_parallel_size']}\"\n",
     "                    )\n",
+    "\n",
     "            optimizer.step()\n",
     "\n",
+    "    # 销毁进程组，释放资源\n",
     "    dist.destroy_process_group()"
    ]
   },
