--- a/demo4/demo4.ipynb
+++ b/demo4/demo4.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**因 Jupter 对多进程支持不完善，因此分布式实验的代码运行均需要通过脚本执行！！！！！！**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.背景介绍\n",
     "\n",
     "本实验主要研究 Megatron-LM 分布式训练框架下的张量并行训练方法。"
@@ -176,31 +183,42 @@
    "outputs": [],
    "source": [
     "def get_train_data_iterator():\n",
+    "    # 如果分布式训练功能可用并且已初始化\n",
     "    if torch.distributed.is_available() and torch.distributed.is_initialized():\n",
+    "        # 只有 rank 为 0 的进程负责编译辅助函数\n",
     "        if torch.distributed.get_rank() == 0:\n",
     "            compile_helpers()\n",
+    "        # 所有进程在这里同步，等待 rank 0 完成编译\n",
     "        torch.distributed.barrier()\n",
     "    else:\n",
+    "        # 非分布式或未初始化，直接本地编译辅助函数\n",
     "        compile_helpers()\n",
     "\n",
+    "    # 配置数据集构建参数\n",
     "    config = GPTDatasetConfig(\n",
-    "        random_seed=0,\n",
-    "        sequence_length=_SEQUENCE_LENGTH,\n",
-    "        reset_position_ids=False,\n",
-    "        reset_attention_mask=False,\n",
-    "        eod_mask_loss=False,\n",
-    "        tokenizer=_NullTokenizer(vocab_size=_SEQUENCE_LENGTH),\n",
+    "        random_seed=0,                       # 固定随机种子以保证数据一致性\n",
+    "        sequence_length=_SEQUENCE_LENGTH,   # 序列长度\n",
+    "        reset_position_ids=False,           # 不重置 position_ids\n",
+    "        reset_attention_mask=False,         # 不重置 attention_mask\n",
+    "        eod_mask_loss=False,                # 不在 EOD（end of document）位置掩码 loss\n",
+    "        tokenizer=_NullTokenizer(vocab_size=_SEQUENCE_LENGTH),  # 使用一个空的 tokenizer（仅用于 mock 数据）\n",
     "    )\n",
     "\n",
+    "    # 构建混合数据集，使用 MockGPTDataset 和指定配比\n",
     "    datasets = BlendedMegatronDatasetBuilder(\n",
-    "        MockGPTDataset, [1000, None, None], lambda: True, config\n",
+    "        MockGPTDataset,             # 数据集类型\n",
+    "        [1000, None, None],         # 数据样本数量配比（这里只使用一个有效子数据集）\n",
+    "        lambda: True,               # 启用数据集构建的条件（始终为 True）\n",
+    "        config                      # 上面定义的数据集配置\n",
     "    ).build()\n",
     "\n",
+    "    # 使用 PyTorch 的 DataLoader 加载训练数据集\n",
     "    train_dataloader = DataLoader(datasets[0], batch_size=128, shuffle=True)\n",
     "\n",
+    "    # 获取迭代器（便于每次训练循环中按 batch 取数据）\n",
     "    train_iterator = iter(train_dataloader)\n",
     "\n",
-    "    return train_iterator"
+    "    return train_iterator  # 返回训练数据迭代器\n"
    ]
   },
   {
@@ -248,7 +266,52 @@
     "    sharded_state_dict=gpt_model.sharded_state_dict(prefix='')\n",
     "    checkpoint = dist_checkpointing.load(sharded_state_dict=sharded_state_dict, checkpoint_dir=checkpoint_path)\n",
     "    gpt_model.load_state_dict(checkpoint)\n",
-    "    return gpt_model\n"
+    "    return gpt_model\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    initialize_distributed(tensor_model_parallel_size=2, pipeline_model_parallel_size=1)\n",
+    "    model_parallel_cuda_manual_seed(123)\n",
+    "\n",
+    "    gpt_model = model_provider()\n",
+    "    device = torch.device(\"cuda\")\n",
+    "    gpt_model.to(device)\n",
+    "\n",
+    "    optim = Adam(gpt_model.parameters())\n",
+    "\n",
+    "    train_iterator = get_train_data_iterator()\n",
+    "\n",
+    "    forward_backward_func = get_forward_backward_func()\n",
+    "\n",
+    "    # Running the model for 200 iterations\n",
+    "    for _ in range(200):\n",
+    "        optim.zero_grad()\n",
+    "\n",
+    "        losses_reduced = forward_backward_func(\n",
+    "            forward_step_func=forward_step_func,\n",
+    "            data_iterator=train_iterator,\n",
+    "            model=gpt_model,\n",
+    "            num_microbatches=1,\n",
+    "            seq_length=_SEQUENCE_LENGTH,\n",
+    "            micro_batch_size=32,\n",
+    "            decoder_seq_length=_SEQUENCE_LENGTH,\n",
+    "            forward_only=False,\n",
+    "        )\n",
+    "\n",
+    "        optim.step()\n",
+    "\n",
+    "        print(f\"Losses reduced :  {losses_reduced}\")\n",
+    "\n",
+    "    # Saving the model\n",
+    "    ckpt_path = os.getcwd() + \"/ckpt\"\n",
+    "    Path(ckpt_path).mkdir(exist_ok=True)\n",
+    "    save_distributed_checkpoint(gpt_model=gpt_model, checkpoint_path=ckpt_path)\n",
+    "\n",
+    "    # Loading the model\n",
+    "    gpt_model = load_distributed_checkpoint(\n",
+    "        gpt_model=gpt_model, checkpoint_path=ckpt_path\n",
+    "    )\n",
+    "    gpt_model.to(device)\n",
+    "    print(\"Successfully loaded the model\")\n"
    ]
   },
   {
