--- a/demo5/demo5.ipynb
+++ b/demo5/demo5.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**因 Jupter 对多进程支持不完善，因此分布式实验的代码运行均需要通过脚本执行！！！！！！**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.背景介绍\n",
     "\n",
     "本实验主要研究 基于 huggingface transformers 库和 deepspeed 进行单机两卡微调方法。"
