--- a/demo3/demo3.ipynb
+++ b/demo3/demo3.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**因 Jupter 对多进程支持不完善，因此分布式实验的代码运行均需要通过脚本执行！！！！！！**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.背景介绍\n",
     "\n",
     "本实验主要研究 PyTorch 分布式训练框架下的多机多卡数据/流水线混合并行训练方法。"
