add some explanation

--- a/demo2/demo2.ipynb
+++ b/demo2/demo2.ipynb
@@ -321,6 +321,7 @@
     "    x = torch.zeros((BATCH_SIZE // NUM_MICROBATCHES, DATASET_LENGTH - 1), dtype=torch.long)\n",
     "\n",
     "    # 构建带有 split_spec 的 GPipe pipeline，将模型划分为多个 stage\n",
+    "    # 流水线并行的关键是怎么划分一个较大的模型，将模型的不同部分放到不同的 GPU 上。pytorch 的 pipeline 方法，提供了一个基于计算图和编译技术的划分方式，从而在处理不同模型的时候，用户不需要手动将模型切分出来，提高了使用的便利性。\n",
     "    pipe = pipeline(\n",
     "        module=Transformer(\n",
     "            vocab_size=VOCAB_SIZE,\n",
@@ -354,6 +355,10 @@
     "    stage = pipe.build_stage(rank, device, None)\n",
     "\n",
     "    # 创建 GPipe 的训练调度器（ScheduleGPipe）\n",
+    "    # GPipe 调度器具体处理了 microbatch 优化的相关逻辑，负责切分，发送，stage 之间的发送，以及反向传播的过程。\n",
+    "    # 不同于数据并行，流水线并行的调度流程更为复杂，形式上不能和 DDP 一样，warp 成一个带有 forward 方法的 model。例如只有最后一个 stage 需要计算 loss，而且反向传播的正向传播的过程中，不同 stage 都需要进行通信。\n",
+    "    # 而朴素的数据并行在前向传播和反向传播的过程，不同进程组是完全独立的，进程编号不会影响结构，因此实现逻辑上简单一些。\n",
+    "    # 用户在使用的时候，需要将损失函数的计算逻辑传递给 Schedular。\n",
     "    schedule = ScheduleGPipe(stage, NUM_MICROBATCHES, compute_loss)\n",
     "\n",
     "    # 正式开始训练过程\n",
