--- a/demo4/demo4.ipynb
+++ b/demo4/demo4.ipynb
@@ -234,18 +234,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 定义 forward step 函数，用于执行一次前向传播\n",
     "def forward_step_func(data_iterator, model):\n",
     "\n",
+    "    # 定义损失函数\n",
     "    def loss_func(loss_mask: torch.Tensor, output_tensor: torch.Tensor):\n",
-    "\n",
     "        losses = output_tensor.float()\n",
     "        loss_mask = loss_mask.view(-1).float()\n",
+    "        # 只对有 label 的位置计算损失\n",
     "        loss = torch.sum(losses.view(-1) * loss_mask) / loss_mask.sum()\n",
-    "        # If you have data parallel reduce loss across data parallel groups.\n",
-    "        # If pipeline parallel, loss computation is done only in last stage.\n",
     "\n",
+    "        # 返回 loss 和一个带有命名的字典（便于日志记录等）\n",
     "        return loss, {'lm loss': loss}\n",
     "\n",
+    "    # 从数据迭代器中取出一批数据，并放到指定设备上\n",
     "    data = next(data_iterator)\n",
     "    tokens = data['tokens'].to(device)\n",
     "    attention_mask = data['attention_mask'].to(device)\n",
@@ -253,60 +255,80 @@
     "    labels = data['labels'].to(device)\n",
     "    loss_mask = data['loss_mask'].to(device)\n",
     "\n",
-    "    output_tensor = model(tokens, position_ids, attention_mask,\n",
-    "                          labels=labels)\n",
+    "    # 调用模型进行前向传播，返回输出张量\n",
+    "    output_tensor = model(tokens, position_ids, attention_mask, labels=labels)\n",
     "\n",
+    "    # 返回输出和部分绑定好的 loss 函数（只差 output_tensor）\n",
     "    return output_tensor, partial(loss_func, loss_mask)\n",
     "\n",
+    "\n",
+    "# 保存分布式模型 checkpoint\n",
     "def save_distributed_checkpoint(checkpoint_path, gpt_model):\n",
+    "    # 获取模型的分片 state_dict\n",
     "    sharded_state_dict = gpt_model.sharded_state_dict(prefix='')\n",
+    "    # 保存分布式分片 checkpoint\n",
     "    dist_checkpointing.save(sharded_state_dict=sharded_state_dict, checkpoint_dir=checkpoint_path)\n",
     "\n",
+    "\n",
+    "# 加载分布式模型 checkpoint\n",
     "def load_distributed_checkpoint(checkpoint_path, gpt_model):\n",
-    "    sharded_state_dict=gpt_model.sharded_state_dict(prefix='')\n",
+    "    sharded_state_dict = gpt_model.sharded_state_dict(prefix='')\n",
     "    checkpoint = dist_checkpointing.load(sharded_state_dict=sharded_state_dict, checkpoint_dir=checkpoint_path)\n",
+    "    # 加载参数到模型中\n",
     "    gpt_model.load_state_dict(checkpoint)\n",
     "    return gpt_model\n",
     "\n",
+    "\n",
+    "# 主程序入口\n",
     "if __name__ == \"__main__\":\n",
+    "    # 初始化分布式训练，设置张量并行大小为 2，流水线并行为 1（即不使用流水线并行）\n",
     "    initialize_distributed(tensor_model_parallel_size=2, pipeline_model_parallel_size=1)\n",
+    "\n",
+    "    # 设置模型并行随机种子，保证不同设备上初始化一致\n",
     "    model_parallel_cuda_manual_seed(123)\n",
     "\n",
+    "    # 初始化模型\n",
     "    gpt_model = model_provider()\n",
+    "\n",
+    "    # 将模型放到 CUDA 设备上\n",
     "    device = torch.device(\"cuda\")\n",
     "    gpt_model.to(device)\n",
     "\n",
+    "    # 使用 Adam 优化器\n",
     "    optim = Adam(gpt_model.parameters())\n",
     "\n",
+    "    # 获取训练数据迭代器（每次返回一批数据）\n",
     "    train_iterator = get_train_data_iterator()\n",
     "\n",
+    "    # 获取前向和反向传播封装函数\n",
     "    forward_backward_func = get_forward_backward_func()\n",
     "\n",
-    "    # Running the model for 200 iterations\n",
+    "    # 训练 200 次迭代\n",
     "    for _ in range(200):\n",
     "        optim.zero_grad()\n",
     "\n",
+    "        # 前向 + 反向传播，支持多 microbatch 的训练\n",
     "        losses_reduced = forward_backward_func(\n",
-    "            forward_step_func=forward_step_func,\n",
-    "            data_iterator=train_iterator,\n",
-    "            model=gpt_model,\n",
-    "            num_microbatches=1,\n",
-    "            seq_length=_SEQUENCE_LENGTH,\n",
-    "            micro_batch_size=32,\n",
-    "            decoder_seq_length=_SEQUENCE_LENGTH,\n",
-    "            forward_only=False,\n",
+    "            forward_step_func=forward_step_func,  # 前向函数\n",
+    "            data_iterator=train_iterator,        # 数据迭代器\n",
+    "            model=gpt_model,                     # 模型\n",
+    "            num_microbatches=1,                  # microbatch 数量\n",
+    "            seq_length=_SEQUENCE_LENGTH,         # 输入序列长度\n",
+    "            micro_batch_size=32,                 # 每个 microbatch 的 batch size\n",
+    "            decoder_seq_length=_SEQUENCE_LENGTH, # decoder 长度（通常等于输入）\n",
+    "            forward_only=False,                  # 训练模式（非推理）\n",
     "        )\n",
     "\n",
     "        optim.step()\n",
     "\n",
     "        print(f\"Losses reduced :  {losses_reduced}\")\n",
     "\n",
-    "    # Saving the model\n",
+    "    # 保存模型 checkpoint 到 ckpt 目录\n",
     "    ckpt_path = os.getcwd() + \"/ckpt\"\n",
     "    Path(ckpt_path).mkdir(exist_ok=True)\n",
     "    save_distributed_checkpoint(gpt_model=gpt_model, checkpoint_path=ckpt_path)\n",
     "\n",
-    "    # Loading the model\n",
+    "    # 加载保存的模型\n",
     "    gpt_model = load_distributed_checkpoint(\n",
     "        gpt_model=gpt_model, checkpoint_path=ckpt_path\n",
     "    )\n",
