--- a/demo5/demo5.ipynb
+++ b/demo5/demo5.ipynb
@@ -45,7 +45,17 @@
     "\n",
     "ZeRO 尝试对数据并行进一步优化，从而达到节省显存的目的。\n",
     "\n",
-    "ZeRO 的原理是将模型权重，梯度，优化器状态在不同 DP 组进行切分，在每次计算时，将分布在不同 DP 组的张量聚集起来，计算完毕后便释放到逐个 DP 组存储。增加部分通讯延迟来节省显存。"
+    "ZeRO 的原理是将模型权重，梯度，优化器状态在不同 DP 组进行切分，在每次计算时，将分布在不同 DP 组的张量聚集起来，计算完毕后便释放到逐个 DP 组存储。增加部分通讯延迟来节省显存。\n",
+    "\n",
+    "ZeRO 还可以将部分计算放到 CPU 上，进一步优化显存的使用。\n",
+    "\n",
+    "### Transformers Accelerate 库\n",
+    "\n",
+    "huggingface 提供了一些库帮助用户方便进行大模型微调，在本次实验中，我们只需要用 torchrun 开启多进程，相关的库会自动获取 rank 和 world_size，并把模型放到多个进程上。\n",
+    "\n",
+    "因此，我们只需要填写数据集、模型和一些基本的训练参数，其余的事情都可以交给 Transformers 和 Accelerate 库去做。\n",
+    "\n",
+    "Accelerate 通过支持 Deepspeed 的方式进一步支持了 ZeRO，通过写 deepspeed config 并传参的方式，Accelerate 自动帮我们进行 DP 的优化。"
    ]
   },
   {
@@ -108,6 +118,13 @@
    "source": [
     "### 5.1. deepspeed config\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deepspeed config 控制了 ZeRO 的具体形式，例如是否切分优化器，是否将优化器下放到 CPU，提供了非常多通讯时间换显存的操作，从而避免在训练过程中爆显存"
    ]
   },
   {
@@ -238,9 +255,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 定义系统提示词，一般用于设定模型身份或行为风格\n",
     "system_prompt = \"You are Qwen, created by Alibaba Cloud. You are a helpful assistant.\"\n",
+    "\n",
+    "# 构造训练样本的函数，用于从 prompt 和 completion 构造 input_ids, attention_mask 和 labels\n",
     "def generate_r1_prompt(prompt, completion):\n",
     "    input_ids, attention_mask, labels = [], [], []\n",
+    "\n",
+    "    # 构造指令部分：系统设定和用户输入\n",
     "    instruction = [\n",
     "        {\n",
     "            \"role\": \"system\",\n",
@@ -251,6 +273,8 @@
     "            \"content\": prompt\n",
     "        },\n",
     "    ]\n",
+    "\n",
+    "    # 构造响应部分：模型的回答（目标输出）\n",
     "    response = [\n",
     "        {\n",
     "            \"role\": \"assistant\",\n",
@@ -258,24 +282,42 @@
     "        }\n",
     "    ]\n",
     "\n",
+    "    # 将 instruction 和 response 拼接成完整的对话\n",
     "    full = instruction + response\n",
     "\n",
-    "    tokenized_instruction = tokenizer.apply_chat_template(instruction, tokenize=True, return_dict=True)\n",
-    "    tokenized_full = tokenizer.apply_chat_template(full, tokenize=True, return_dict=True)\n",
+    "    # 对 instruction（系统+用户）进行分词，用于计算标签掩码（仅训练 assistant 的回复）\n",
+    "    tokenized_instruction = tokenizer.apply_chat_template(\n",
+    "        instruction, tokenize=True, return_dict=True\n",
+    "    )\n",
     "\n",
+    "    # 对完整对话进行分词，生成 input_ids 和 attention_mask\n",
+    "    tokenized_full = tokenizer.apply_chat_template(\n",
+    "        full, tokenize=True, return_dict=True\n",
+    "    )\n",
+    "\n",
+    "    # 获取完整输入的 token ID 和 attention mask\n",
     "    input_ids = tokenized_full[\"input_ids\"]\n",
     "    attention_mask = tokenized_full[\"attention_mask\"]\n",
+    "\n",
+    "    # 初始化标签为 input_ids 的副本（后续根据需要掩盖一部分）\n",
     "    labels = input_ids.copy()\n",
+    "\n",
+    "    # 只训练 assistant 的回复，因此将 instruction 部分的标签设为 -100，表示不参与 loss 计算\n",
     "    instruction_length = len(tokenized_instruction[\"input_ids\"])\n",
     "    labels[:instruction_length] = [-100] * instruction_length\n",
+    "\n",
     "    return {\n",
     "        \"input_ids\": input_ids,\n",
     "        \"attention_mask\": attention_mask,\n",
     "        \"labels\": labels\n",
     "    }\n",
-    " \n",
-    "dataset = dataset.map(lambda x: generate_r1_prompt(x[\"instruction\"], x[\"output\"]), remove_columns=[\"instruction\", \"output\"])\n",
-    "\n"
+    "\n",
+    "# 使用 map 操作对整个数据集进行处理，调用 generate_r1_prompt 来转换格式\n",
+    "# 并删除原始字段 instruction 和 output，只保留训练所需的 input_ids, attention_mask, labels\n",
+    "dataset = dataset.map(\n",
+    "    lambda x: generate_r1_prompt(x[\"instruction\"], x[\"output\"]),\n",
+    "    remove_columns=[\"instruction\", \"output\"]\n",
+    ")\n"
    ]
   },
   {
@@ -340,17 +382,18 @@
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"./fine_tuned_qwen\",\n",
-    "    per_device_train_batch_size=1,\n",
-    "    num_train_epochs=10,\n",
-    "    save_strategy=\"no\",\n",
-    "    logging_dir=\"./logs\",\n",
-    "    logging_steps=1,\n",
-    "    evaluation_strategy=\"no\",\n",
-    "    save_total_limit=1,\n",
-    "    deepspeed=\"deepspeed_config.json\",\n",
-    "    fp16=True,\n",
-    ")"
+    "    output_dir=\"./fine_tuned_qwen\",               # 模型输出目录\n",
+    "    per_device_train_batch_size=1,                # 每张GPU的训练batch大小\n",
+    "    num_train_epochs=10,                          # 总训练轮数\n",
+    "    save_strategy=\"no\",                           # 不保存中间checkpoint\n",
+    "    logging_dir=\"./logs\",                         # 日志保存路径\n",
+    "    logging_steps=1,                              # 每训练1步记录一次日志\n",
+    "    evaluation_strategy=\"no\",                     # 不进行评估\n",
+    "    save_total_limit=1,                           # 最多保留1个checkpoint\n",
+    "    deepspeed=\"deepspeed_config.json\",            # 指定deepspeed配置文件\n",
+    "    fp16=True,                                    # 使用混合精度训练（float16）\n",
+    "    gradient_checkpointing=True                   # 启用梯度检查点，节省显存\n",
+    ")\n"
    ]
   },
   {
@@ -382,6 +425,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trainer.train()\n",
+    "\n",
+    "test_model = trainer.model_wrapped\n",
+    "prompt = \"1.11和1.8哪个大\"\n",
+    "inputs = tokenizer.apply_chat_template([{\"role\": \"user\", \"content\": prompt}],\n",
+    "                                       add_generation_prompt=True,\n",
+    "                                       tokenize=True,\n",
+    "                                       return_tensors=\"pt\",\n",
+    "                                       return_dict=True\n",
+    "                                       ).to(\"cuda\")\n",
+    "\n",
+    "gen_kwargs = {\"max_length\": 200, \"do_sample\": True, \"top_k\": 1}\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = test_model.generate(**inputs, **gen_kwargs)\n",
+    "    outputs = outputs[:, inputs['input_ids'].shape[1]:]\n",
+    "    if os.environ[\"RANK\"] == \"0\":\n",
+    "        print(\"微调后模型推理结果：\\n\", tokenizer.decode(outputs[0], skip_special_tokens=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!bash run.sh"
    ]
   }
@@ -402,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
