--- a/demo3/demo3.ipynb
+++ b/demo3/demo3.ipynb
@@ -362,6 +362,9 @@
     "    )\n",
     "\n",
     "    # 初始化 2D 并行设备网格（data 并行 x pipeline 并行）\n",
+    "    # 例如，4 张 GPU 进行训练，编号为 0 1 2 3，一种 2D 并行方法为：GPU 0 1 为一个DP组，两张卡负责存储完整的模型权重，其中 0 号卡负责前半部分模型，1 号卡后半部分模型。 2 3 号卡同理。\n",
+    "    # 这样 4 张 GPU 便可以存储两个完整的模型权重，每张 GPU 需要模型权重一半的显存。在节省显存的同时，因为同时处理两个 batch 的数据，也提高了训练的速度。\n",
+    "    # device_mesh 即定义了这种二维设备关系，例如哪两个卡属于同一个 DP 组。\n",
     "    mesh_2d = init_device_mesh(\n",
     "        training_args[\"device_type\"],\n",
     "        mesh_shape=(\n",
@@ -375,6 +378,8 @@
     "    pp_group = mesh_2d.get_group(\"pp\")\n",
     "    dp_group = mesh_2d.get_group(\"dp\")\n",
     "\n",
+    "    # pp rank 指的是该进程负责保存模型前半部分还是后半部分\n",
+    "    # dp rank 指的是该进程属于哪个 dp 组，相同 dp 组内的卡共同保存模型的权重\n",
     "    pp_rank = dist.get_rank(pp_group)\n",
     "    dp_rank = dist.get_rank(dp_group)\n",
     "\n",
@@ -414,6 +419,9 @@
     "    )\n",
     "\n",
     "    # 训练主循环\n",
+    "    # 在训练的主循环里，不仅用到了 DP ，也用到了 PP 。\n",
+    "    # 对于 DP，我们需要维护一个 DistributedSampler，对于 PP 我们有Pipeline Schedular。\n",
+    "    # DDP 将模型 warp 以后，在反向传播以后会自动同步梯度，而反向传播的具体过程，又由 schedular 提供，因为 torch 的工程实现，我们组合两种并行方法变得较为简单。\n",
     "    for epoch in range(training_args[\"train_epochs\"]):\n",
     "        for batch, data in enumerate(dataloader):\n",
     "            label = data[:, 1:].to(device)\n",
@@ -455,7 +463,12 @@
    "metadata": {},
    "source": [
     "- 修改 run.sh 中服务器地址\n",
-    "- 第 i 台机器对应的启动命令为 bash run.sh i"
+    "- 第 i 台机器对应的启动命令为 bash run.sh i\n",
+    "- 本次实验需要用到两台机器，每台机器有两张 GPU，那么需要首先获得 master 地址，然后修改脚本，填写 master 地址，在节点 1 上执行 bash run.sh 0，在节点 2 上执行 bash run.sh 1\n",
+    "\n",
+    "node_rank=$1\n",
+    "\n",
+    "torchrun --nnodes 2 --node-rank $node_rank --nproc_per_node=2 --master-addr 1.1.1.1 --master_port=11111 ddp_pp_train.py --config config.yaml"
    ]
   },
   {
