clear some unimportant annotation

--- a/demo3/demo3.ipynb
+++ b/demo3/demo3.ipynb
@@ -321,7 +321,6 @@
     "\n",
     "\n",
     "def train(rank, world_size, config_file):\n",
-    "    # 加载配置\n",
     "    model_args, dataset_args, training_args, parallel_args = parse_yaml_config(config_file)\n",
     "\n",
     "    # 定义 loss 函数\n",
@@ -433,7 +432,7 @@
     "                # 第一个阶段只进行前向传播\n",
     "                schedule.step(x)\n",
     "            else:\n",
-    "                # 其他阶段进行前向 + 反向传播，并收集 loss\n",
+    "                # 最后一个阶段进行前向 + 反向传播，并收集 loss\n",
     "                losses = []\n",
     "                output = schedule.step(target=label, losses=losses)\n",
     "                loss = torch.stack(losses).mean()\n",
