modify markdown format & clear annotation

--- a/demo1/demo1.ipynb
+++ b/demo1/demo1.ipynb
@@ -25,11 +25,11 @@
    "metadata": {},
    "source": [
     "## 2.实验目的\n",
-    "掌握 PyTorch 分布式训练框架的基本概念，包括 torch.distributed、DistributedDataParallel 等核心 API。\n",
+    "- 掌握 PyTorch 分布式训练框架的基本概念，包括 torch.distributed、DistributedDataParallel 等核心 API。\n",
     "\n",
-    "实现基于 DDP 的数据并行训练，在单机多 GPU 设备上进行深度学习模型训练，并理解其工作原理。\n",
+    "- 实现基于 DDP 的数据并行训练，在单机多 GPU 设备上进行深度学习模型训练，并理解其工作原理。\n",
     "\n",
-    "理解 DistributedSampler 在多 GPU 训练中的作用，确保数据在多个进程间均匀分配。\n"
+    "- 理解 DistributedSampler 在多 GPU 训练中的作用，确保数据在多个进程间均匀分配。\n"
    ]
   },
   {
@@ -265,13 +265,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在 PyTorch 分布式训练中，每个训练进程称为一个“worker”，每个 worker 会处理自己分配的一部分数据和模型副本。\n",
+    "- 在 PyTorch 分布式训练中，每个训练进程称为一个“worker”，每个 worker 会处理自己分配的一部分数据和模型副本。\n",
     "\n",
-    "world_size：表示所有参与训练的进程总数。例如，如果你在 2 张 GPU 上各启动 1 个进程，world_size 就是 2。\n",
+    "- world_size：表示所有参与训练的进程总数。例如，如果你在 2 张 GPU 上各启动 1 个进程，world_size 就是 2。\n",
     "\n",
-    "rank：表示当前进程的编号，从 0 开始。例如，有两个进程的话，rank 可以是 0 或 1。每个进程通过 rank 来区分身份并处理属于自己的数据子集。\n",
+    "- rank：表示当前进程的编号，从 0 开始。例如，有两个进程的话，rank 可以是 0 或 1。每个进程通过 rank 来区分身份并处理属于自己的数据子集。\n",
     "\n",
-    "这两个参数在 dist.init_process_group() 中被用来初始化通信组，使得每个进程知道自己是谁以及整个训练的结构。"
+    "- 这两个参数在 dist.init_process_group() 中被用来初始化通信组，使得每个进程知道自己是谁以及整个训练的结构。"
    ]
   },
   {
