--- a/demo4/demo4.ipynb
+++ b/demo4/demo4.ipynb
@@ -41,11 +41,11 @@
     "\n",
     "### 张量并行\n",
     "\n",
-    "为了解决朴素数据并行显存节省效率不高，朴素流水线并行计算效率不高的问题，张量并行对模型纵向切分，每张 GPU 保存一层的部分权重，在运算时，输入张量在每一张 GPU 上分别计算，然后通过 GPU 之间的通信聚合起来。\n",
+    "- 为了解决朴素数据并行显存节省效率不高，朴素流水线并行计算效率不高的问题，张量并行对模型纵向切分，每张 GPU 保存一层的部分权重，在运算时，输入张量在每一张 GPU 上分别计算，然后通过 GPU 之间的通信聚合起来。\n",
     "\n",
-    "相较于朴素的流水线并行，张量并行每一次计算均有多张 GPU 参与。\n",
+    "- 相较于朴素的流水线并行，张量并行每一次计算均有多张 GPU 参与。\n",
     "\n",
-    "相较于朴素的数据并行，张量并行每一张 GPU 保存部分模型权重。"
+    "- 相较于朴素的数据并行，张量并行每一张 GPU 保存部分模型权重。"
    ]
   },
   {
